tests/cases/should_fail/types/missing_type_in_function_literal.stderr
error: expected a type annotation
 --> $DIR/missing_type_in_function_literal.hash:3:19
2 |   
3 |   foo := (l: u32, k:) -> u32 => { // error here!
  |                     ^ here
4 |       l * k
